# quipucamayoc

./: .gitignore  CITATION.cff  DISTRIBUTION.md  MANIFEST.in  POPPLER.MD  README.md  TODO.md  pyproject.toml  quipucamayoc.bib  setup.cfg
docs/: quick.py
quipucamayoc/: __init__.py  aws_extract_tables.py  aws_setup.py  aws_utils.py  cli.py  document.py  folder.py  image_utils.py  lines.py  ocr_aws.py  old_aws_extract_tables.py  page.py  pdf.py  poppler_wrapper.py  utils.py  version.py
quipucamayoc/DewarpNet/: __init__.py
quipucamayoc/DocTr/: GeoTr.py  IllTr.py  NOTE.md  __init__.py  inference_ill.py  position_encoding.py  seg.py
quipucamayoc/dewarpnet/: NOTE.md  __init__.py
quipucamayoc/dewarpnet/loaders/: augmentationsk.py  doc3dbmnoimgc_loader.py  doc3dwc_loader.py
quipucamayoc/dewarpnet/models/: __init__.py
quipucamayoc/x/: infer.py
quipucamayoc/x/loaders/: __init__.py
