[metadata]
name = quipucamayoc
version = attr: quipucamayoc.__version__
author = Sergio Correia, Stephan Luck
author_email = sergio.correia@gmail.com
url = https://github.com/sergiocorreia/quipucamayoc/
description = Tools to extract information from digitized historical documents
long_description = file: README.md, LICENSE
keywords = ocr, data extraction, tables, economic history
license = GNU Affero General Public License v3
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: POSIX :: Linux"
    Operating System :: Unix"
    Operating System :: MacOS"
    Operating System :: Microsoft :: Windows"
license_files = LICENSE

[options]
python_requires = >=3.9
zip_safe = False
packages = find:
