[metadata]
name = quipucamayoc
version = attr: quipucamayoc.version.__version__
author = Sergio Correia, Stephan Luck
author_email = sergio.correia@gmail.com
url = https://github.com/sergiocorreia/quipucamayoc/
description = Tools to extract information from digitized historical documents
long_description_content_type = text/markdown
long_description = file: README.md
keywords = ocr, data extraction, tables, economic history
license = GNU Affero General Public License v3
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    opencv-python >= 4.5.5.62
    numpy >= 1.21.2
    boto3 >= 1.21.1
    awscli >= 1.22.84
    click >= 8.0.3
    Pillow >= 9.0.1
    loguru >= 0.6.0
    rich >= 12.3.0

[options.extras_require]
dev = matplotlib >= 3.5.0; hdf5storage >= 0.1.14; pytorch >= 1.12.0; scikit-image >= 0.19.2

zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
        quipu = quipucamayoc:cli
